test/parser/attributes/malformed_literal_error.myte
module test

@(If(Attr1 = Foo))
fun foo() {}